Bug 12491 - i915 lockdep warning
Summary: i915 lockdep warning
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - non Intel) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_video-dri
URL:
Keywords:
: 12600 (view as bug list)
Depends on:
Blocks: 12398
  Show dependency tree
 
Reported: 2009-01-19 08:42 UTC by Rafael J. Wysocki
Modified: 2009-02-23 17:44 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.29-rc1
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description Rafael J. Wysocki 2009-01-19 08:42:10 UTC
Subject    : 2.6.29-rc1: i915 lockdep warning
Submitter  : "Brandeburg, Jesse" <jesse.brandeburg@intel.com>
Date       : 2009-01-13 23:17
References : http://marc.info/?l=linux-kernel&m=123188898423532&w=4

This entry is being used for tracking a regression from 2.6.28.  Please don't
close it until the problem is fixed in the mainline.
Comment 1 Jesse Brandeburg 2009-02-06 17:26:03 UTC
I believe this was fixed by Roland's patch at 
http://marc.info/?l=linux-kernel&m=123378709730700&w=2

At least it fixed it for me.
Comment 2 Rafael J. Wysocki 2009-02-07 05:42:33 UTC
Handled-By : Roland Dreier <rolandd@cisco.com>
Patch : http://marc.info/?l=linux-kernel&m=123378709730700&w=2
Comment 3 Stefan Richter 2009-02-08 23:29:29 UTC
*** Bug 12600 has been marked as a duplicate of this bug. ***
Comment 4 Stefan Richter 2009-02-08 23:31:14 UTC
Duplicate bug 12600 had
Notify-Also : Bob Copeland <me@bobcopeland.com>
Comment 5 Rafael J. Wysocki 2009-02-23 17:44:32 UTC
Fixed by commit a35f2e2b83a789e189a501ebd722bc9a1310eb05 .

Note You need to log in before you can comment on or make changes to this bug.